[gd_scene load_steps=2 format=3 uid="uid://dap6d4ob5myxl"]

[ext_resource type="Script" path="res://Scripts/DASH.gd" id="1_uabe8"]

[node name="DASH" type="Node"]
script = ExtResource("1_uabe8")

[node name="DashDuration" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="DashDuration" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_ghost_timer_timeout"]
